--- a/Code/app/src/main/res/layout/activity_extension.xml
+++ b/Code/app/src/main/res/layout/activity_extension.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Select Extension"
+            android:text="Extension"
             android:textColor="@color/colorWhite"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -85,7 +85,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/bt_cd_CelebrationOfEnvironmental"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_centerInParent="true"
-                    android:text="@string/Celebration_Environmental_Planting"
+                    android:text="@string/Celebration_Environmental_Planting_Event"
                     android:textColor="@color/colorWhite"
                     android:textSize="18dp"
                     android:textStyle="bold" />
