--- a/Code/app/src/main/res/layout/activity_water_harvesting_schemes.xml
+++ b/Code/app/src/main/res/layout/activity_water_harvesting_schemes.xml
@@ -91,21 +91,6 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Rain Water Harvesting Schemes"
-                        android:inputType="text" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/EditTextOutline"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:boxStrokeColor="@color/colorBlack"
-                    app:hintTextColor="@color/colorBlack">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
                         android:hint="Water Source Development Schemes"
                         android:inputType="text" />
 
@@ -151,22 +136,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="In Process"
-                        android:inputType="text" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/EditTextOutline"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:boxStrokeColor="@color/colorBlack"
-                    app:hintTextColor="@color/colorBlack">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Balance Target"
+                        android:hint="VDC Establish"
                         android:inputType="text" />
 
                 </com.google.android.material.textfield.TextInputLayout>
